overflow-x property to prevent horizontal scroll bar to show

--- a/src/css/global/global.css
+++ b/src/css/global/global.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: var(--montserrat);
+  overflow-x: hidden;
 }
 
 img {
